--- a/templates/courses/create.html.twig
+++ b/templates/courses/create.html.twig
@@ -70,7 +70,7 @@
                     <div class="create-course-step-input"></div>
                     <div class="create-course-button-section">
                         <button type="button" data-action="form-stepper#previous">Previous</button>
-                        <button type="button"  type="submit" class="">Submit</button>
+                        <button type="submit" class="">Submit</button>
                     </div>
                     
                 </div>
