--- a/assets/styles/showcourse.css
+++ b/assets/styles/showcourse.css
@@ -87,6 +87,17 @@
     padding-left: 1em;
 }
 
+.episode-blocked{
+    cursor: default;
+    display: flex;
+    flex-direction: row;
+}
+
+.lock-img{
+    height: 1em;
+    margin-left: 1em;
+}
+
 .cshow-chapters-element-episode-container {
     padding-left: 20px;
     border-left: 2px solid #ddd;
