--- a/templates/partials/_return_nav.html.twig
+++ b/templates/partials/_return_nav.html.twig
@@ -1,8 +1,8 @@
-<nav class="navbar">
+<nav class="navbar navbar-return">
 
-                <div class="navbar-container-left">
-                    <div class="navbar-item">
-                        <a href= {{ return_route }} class="navbar-item"><img height=50 src="/icons/return.svg" alt="return"></a>
-                    </div>
-                </div>
-        </nav>
+        <div class="navbar-container-left">
+            <div class="navbar-item">
+                <a href= {{ return_route }} class="navbar-item"><img height=50 src="/icons/return.svg" alt="return"></a>
+            </div>
+        </div>
+</nav>
